--- a/emotion-detection/conf/base/catalog.yml
+++ b/emotion-detection/conf/base/catalog.yml
@@ -32,16 +32,20 @@ mel_features:
   type: pandas.CSVDataSet
   filepath: data/03_primary/mel_features.csv
 
+mel_images:
+  type: pickle.PickleDataSet
+  filepath: data/03_primary/mel_images.csv
+
 X_train_pre:
-  type: pandas.CSVDataSet
+  type: pickle.PickleDataSet
   filepath: data/04_feature/X_train_pre.csv
 
 X_val_pre:
-  type: pandas.CSVDataSet
+  type: pickle.PickleDataSet
   filepath: data/04_feature/X_val_pre.csv
 
 X_test_pre:
-  type: pandas.CSVDataSet
+  type: pickle.PickleDataSet
   filepath: data/04_feature/X_test_pre.csv
 
 y_train_pre:
@@ -57,15 +61,15 @@ y_test_pre:
   filepath: data/04_feature/y_test_pre.csv
 
 X_train:
-  type: pandas.CSVDataSet
+  type: pickle.PickleDataSet
   filepath: data/05_model_input/X_train.csv
 
 X_val:
-  type: pandas.CSVDataSet
+  type: pickle.PickleDataSet
   filepath: data/05_model_input/X_val.csv
 
 X_test:
-  type: pandas.CSVDataSet
+  type: pickle.PickleDataSet
   filepath: data/05_model_input/X_test.csv
 
 y_train:
