--- a/emotion-detection/conf/base/parameters_train_model.yml
+++ b/emotion-detection/conf/base/parameters_train_model.yml
@@ -5,11 +5,11 @@
 # Link: https://docs.kedro.org/en/0.18.14/configuration/parameters.html
 
 model_params:
-  model_type: "dense"  # "resnet" o "dense"
-  input_shape: 172
+  model_type: "resnet"  # "resnet" o "dense"
+  input_shape: [128, 87, 1] # 172
   n_classes: 6
-  dense_layers: [64, 64]
-  resnet_layers: null  # [[64, 256], [128, 512], [256, 1024], [512, 2048]]
+  dense_layers: null  # [64, 64]
+  resnet_layers: [[64, 256], [128, 512], [256, 1024], [512, 2048]]
 
 train_params:
   batch_size: 64
